andando los 3 primeros casos