@@ -1,5 +1,6 @@
 import java.awt.Window;
 import java.io.BufferedReader;
+import java.io.File;
 import java.io.InputStreamReader;
 import java.util.ArrayList;
 import java.util.List;
@@ -19,7 +20,7 @@ public class CProcesar extends CDialog{
 		iniciarDerivable(padre,vista);
 		accionBotones();
 		vista.setVisible(true);
-		new Thread(() -> ejecutarComando(getComandoArmado(config))).start();
+		new Thread(() -> ejecutarComando(getComandoArmado(config),config.getCommand())).start();
 	}
 
 	private String getComandoArmado(Configuracion config){
@@ -34,12 +35,18 @@ public class CProcesar extends CDialog{
 			parametrosConfig = StringUtils.replace(parametrosConfig, "["+parametro.getNombreParametro()+"]", parametro.getValorParametro());
 			//parametrosConfig = parametrosConfig.replaceFirst("["+parametro.getNombreParametro()+"]", parametro.getValorParametro());
 		}
+		
+		//parametrosConfig = "cmd.exe & cd \"" + config.getCommand() + "\" & " + parametrosConfig;
+		
 		return parametrosConfig;
 	}
 	
-	private void ejecutarComando(String comando) {
+	private void ejecutarComando(String comando,String location) {
 		try {
-			proceso = Runtime.getRuntime().exec(comando); 
+			comando = "cd \"" + location + "\" && " + comando;
+		    ProcessBuilder pb = new ProcessBuilder("cmd.exe", "/c", comando);
+	        pb.redirectErrorStream(true);
+		    proceso = pb.start();
 			BufferedReader in = new BufferedReader(new InputStreamReader(proceso.getInputStream()));  
 			//impresion en pantalla
 			String line = null;
@@ -47,7 +54,7 @@ public class CProcesar extends CDialog{
 				vista.addFirstLine(line);
 			}
 			while ((line = in.readLine()) != null) {  
-			    vista.addNewLine(line);  
+			   vista.addNewLine(line);  
 			}
 			proceso.exitValue();
 			vista.habilitarCerrar();
